# Ekip-Enedis-GenAI

./: .gitignore  Data.csv  Data_cleaned.csv  README.md  cleaning_dataset.ipynb  data_exploration.ipynb  labelisation.py  non_llm_solution.ipynb  pdf_to_csv.py  pdf_to_text.ipynb  pyproject.toml  test.ipynb
Data/: Data.xlsx
data/: Data_cleaned.csv
data-viz-app/: README.md  app.py  requirements.txt
data-viz-app/assets/: css_styles.py
data-viz-app/assets/css/: styles.py
data-viz-app/data/: convert.py  reportings-1.csv  reportings-2.csv
data-viz-app/utils/: dash_display.py  dash_figures.py  dash_filtering.py  import_export.py  load_and_clean_df.py
data-viz-app/utils/dash/: articles_time_series.py  geographic_distribution.py  pie_charts.py  search_filtering.py  sentiment_trend.py  wordcloud.py
front/: .env  app.py
front/assets/css/: styles.py
front/utils/: dash_figures.py  dash_filtering.py  import_export.py  load_and_clean_df.py  shared_utils.py
lambda/: README.md
lambda/Mistral/: lambda-function.py  requirements.txt
lambda/Nova/: departement.py  lambda_function.py.py  location.py  nova_llm.py
lambda/Nova/data_city/: cities_and_postal_code.csv
lambda/TrigerBucket2Bucker/: lambda_functions.py
lambda/TrigerBucket2Nova/: lambda_function.py
notebooks/: exploratory_data_analysis.ipynb
pdf/: pyproject.toml
pdf/notebooks/: pdf_to_text.ipynb
pdf/scripts/: media_ressources.py  pdf2articles.py  pdf_to_img.py  pdf_to_text.py
src/front/: app.py  requirements.txt
src/front/data/: convert.py  (+4 more)
utils/: cleaning_dataset.py  inference.py
(+9 files in other folders)
