[project]
name = "ekip-enedis-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.11",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "unidecode>=1.3.8",
]
